--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 RewriteCond %{SCRIPT_FILENAME} !-d  
 RewriteCond %{SCRIPT_FILENAME} !-f  
 
-RewriteRule ^(.*)$ ./index.php?route=$1
+RewriteRule ^(.*)$ index.php/$1 [QSA,L]
