--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/mikicit/hrecept#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.5",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-sass": "^5.0.0",
+    "gulp-watch": "^5.0.1",
     "sass": "^1.43.2"
   }
 }
