--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "",
+    "build": "gulp run build"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,14 @@
   "homepage": "https://github.com/mikicit/hrecept#readme",
   "devDependencies": {
     "browser-sync": "^2.27.5",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-sass": "^5.0.0",
     "gulp-watch": "^5.0.1",
     "sass": "^1.43.2"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
