--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
     "sass": "^1.43.2"
   },
