--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,16 @@
+Options +FollowSymlinks
+
+# Prevent Directory listing
+Options -Indexes
+
+# Prevent Direct Access to files
+<FilesMatch "(?i)((\.tpl|\.twig|\.ini|\.log|(?<!robots)\.txt))">
+Require all denied
+## For apache 2.2 and older, replace "Require all denied" with these two lines :
+# Order deny,allow
+# Deny from all
+</FilesMatch>
+
 RewriteEngine On  
   
 RewriteCond %{SCRIPT_FILENAME} !-d  
