--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
   },
   "homepage": "https://github.com/mikicit/hrecept#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-dart-sass": "^1.0.2",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "sass": "^1.43.2"
   },
